# CADET-Process

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.rst  README.md  README.rst  environment.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md  release.md
.github/workflows/: coverage.yml  pipeline.yml  publish-to-pypi.yml  ruff.yml
CADETProcess/: CADETProcessError.py  __init__.py  field.py  hashing.py  log.py  metric.py  numerics.py  performance.py  plotting.py  reference.py  settings.json  settings.py  simulationResults.py  smoothing.py  smoothing2.py  solution.py  stationarity.py  sysinfo.py  transform.py
CADETProcess/common/: __init__.py  cache.py  dataStructure.py  event.py  log.py  parameter.py  performance.py  plotlib.py  processMeta.py  section.py  settings.py  timeSignal.py  utils.py
CADETProcess/comparison/: __init__.py  comparator.py  difference.py  peaks.py  shape.py
CADETProcess/dataStructure/: __init__.py  aggregator.py  cache.py  dataStructure.py  deprecation.py  diskcache.py  encoder.py  nested_dict.py  parameter.py  parameter_group.py
CADETProcess/dynamicEvents/: __init__.py  event.py  section.py
CADETProcess/equilibria/: __init__.py  buffer_capacity.py  initialConditions.py  initial_conditions.py  ptc.py  reaction_equilibria.py
CADETProcess/errorModel/: __init__.py  distribution.py  variator.py
CADETProcess/evaluator/: __init__.py  simulate_and_fractionate.py
CADETProcess/fractionation/: FractionationOptimizer.py  __init__.py  fractionationOptimizer.py  fractionator.py  fractions.py
CADETProcess/modelBuilder/: AxialZRMBuilder.py  ZRMBuilder.py  __init__.py  carouselBuilder.py  compartmentBuilder.py  modelBuilder.py
CADETProcess/optimization/: __init__.py  axAdapater.py  cache.py  deapAdapter.py  gpyoptAdapter.py  hopsyAdapter.py  individual.py  ipoptAdapter.py  nonlinearConstraintFunctions.py  objectiveFunctions.py  optimizationProblem.py  optimizer.py  parallelizationBackend.py  population.py  progress.py  pymooAdapter.py  results.py  scipyAdapter.py  solver.py  surrogate.py
CADETProcess/parameter_space/: parameters.py
CADETProcess/processModel/: __init__.py  binding.py  componentSystem.py  cyclic_process.py  discretization.py  flowSheet.py  process.py  reaction.py  reaction_new.py  solutionRecorder.py  temp.py  unitOperation.py
CADETProcess/simulation/: __init__.py  cadetAdapter.py  processEvaluator.py  solution.py  solver.py  stationarity.py
CADETProcess/simulator/: __init__.py  cadetAdapter.py  simulator.py
CADETProcess/tools/: __init__.py  yamamoto.py
docs/: Makefile  README.md  README.rst  environment.yml  requirements.txt
docs/source/: bibliography.md  conf.py  index.md  index.rst  license.md  references.bib
docs/source/advanced_use/: buffer_capacity.md  buffer_equilibria.md  carousel_builder.md  compartment_builder.md  create_inlet_profile.md  deprotonation_reactions.md  event_dependencies.md  gradients.md
docs/source/examples/: index.md
docs/source/getting_started/: cyclic_stationarity.md  fractionation.md  optimization.md  overview.md  parameter_estimation.md  process_optimization.md  reactions.md  simulation.md
docs/source/reference/: CADETProcessError.md  comparison.md  dataStructure.md  dynamicEvents.md  dynamic_events.md  equilibria.md  fractionation.md  fractionation.rst  index.md  index.rst  introduction.rst  log.md  modelBuilder.md  optimization.md  optimization.rst  performance.md  plotting.md  processModel.md  processmodel.rst  reference.md  settings.md  simulation.md  simulation.rst  simulationResults.md  simulator.md  (+6 more)
examples/: README.md  batch_binary.py  batch_binary_optimization.py
examples/batch_elution/: optimization_multi.md  optimization_multi.py  optimization_single.md  optimization_single.py  process.md  process.py
examples/characterize_chromatographic_system/: Yamamoto_method.md  Yamamoto_method.py  binding_model_parameters.md  binding_model_parameters.py  column_transport_parameters.md  column_transport_parameters.py  index.md  particle_porosity.md  particle_porosity.py  system_periphery.md  system_periphery.py
examples/forward_simulation/: batch_binary.py  lwe.py
examples/load_wash_elute/: index.md  lwe_concentration.md  lwe_concentration.py  lwe_flow_rate.md  lwe_flow_rate.py  lwe_hic.md  lwe_hic.py
examples/operating_modes/: README.md  batch_elution.py  lwe.py  lwe_concentration.py  lwe_flow_rate.py  ssr.py  steady_state_recycling.py
examples/parameter_estimation/: README.md  dextran.py
examples/process_optimization/: batch_binary_optimization.py  batch_elution_optimization.py
examples/recycling/: clr_process.md  clr_process.py  index.md  mrssr_process.md  mrssr_process.py
tests/: create_LWE.py  optimization_problem_fixtures.py  test_Cadet_adapter.py  test_ZRMBuilder.py  test_ax.py  test_binding.py  test_buffer_capacity.py  test_cache.py  test_cadet_adapter.py  test_cadet_reactions.py  test_carousel.py  test_compartment.py  test_components.py  test_deprecation.py  test_difference.py  test_equilibrium.py  test_events.py  test_field.py  test_flow_sheet.py  test_fractionating.py  test_fractions.py  test_individual.py  test_mct_simulation.py  test_numerics.py  test_optimization.py  test_optimization_integration.py  test_optimization_problem.py  test_optimization_results.py  test_optimizer_ax.py  test_optimizer_behavior.py  test_parallelization_adapter.py  test_parameters.py  test_performance.py  test_population.py  test_process.py  test_progress.py  test_pymoo.py  test_reaction.py  test_reaction_michaelis.py  test_sections.py  (+4 more)
tests/dataStructure/: test_nested_dict.py
tests/fractionation/: test_fractionator.py  test_fractions.py
tests/parameter_space/: test_parameters.py
tests/process_model_fixtures/: binding_model_fixtures.py  process_fixtures.py  unit_operation_fixtures.py
(+60 files in other folders)
