[metadata]
name = CADET-Process
version = 0.6.3
author = Johannes Schmölder
author_email = j.schmoelder@fz-juelich.de
description = A Framework for Modelling and Optimizing Advanced Chromatographic Processes
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/fau-advanced-separations/CADET-Process
project_urls =
    Bug Tracker = https://github.com/fau-advanced-separations/CADET-Process/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21
    scipy>=1.7
    matplotlib>=3.4
    corner>=2.2.1
    sympy>=1.8
    pathos>=0.2.8
    multiprocess>=0.70
    addict>=2.4
    cadet-python>=0.11
    hopsy>=0.2.0
    pymoo>=0.5
    numba>=0.55.1
