[metadata]
name = CADET-Process
version = 0.7.3
author = Johannes Schmölder
author_email = j.schmoelder@fz-juelich.de
description = A Framework for Modelling and Optimizing Advanced Chromatographic Processes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fau-advanced-separations/CADET-Process
project_urls =
    Bug Tracker = https://github.com/fau-advanced-separations/CADET-Process/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.21
    scipy>=1.11
    matplotlib>=3.4
    corner>=2.2.1
    sympy>=1.8,<1.12
    pathos>=0.2.8
    addict>=2.4
    cadet-python>=0.12
    hopsy>=1.0.0
    pymoo>=0.6
    numba>=0.55.1
    diskcache>=5.4.0

[options.extras_require]
testing =
    setuptools
    certifi     # tries to prevent certificate problems on windows
    pre-commit  # system tests run pre-commit
    flake8      # system tests run flake8
docs =
    sphinx>=5.3.0
    sphinxcontrib-bibtex>=2.5.0
    sphinx_book_theme>=1.0.0
    sphinx_copybutton>=0.5.1
    sphinx-sitemap>=2.5.0
    numpydoc>=1.5.0
    myst-nb>=0.17.1

[flake8]
max_line_length = 88
exclude =
    build
    dist
    .eggs
    docs/conf.py
